--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,18 +45,21 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
-//навигация в приложении
+    //Navigation
     implementation 'androidx.navigation:navigation-fragment-ktx:2.5.3'
     implementation 'androidx.navigation:navigation-ui-ktx:2.5.3'
-//recycler view
+    //RecyclerView
     implementation 'androidx.recyclerview:recyclerview:1.3.0'
     //Glide
     implementation 'com.github.bumptech.glide:glide:4.14.2'
-//Retrofit
+    //Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     //ViewModel
     implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0"
+    //SplashScreen
+    implementation "androidx.core:core-splashscreen:1.0.1"
+
 
 }
